index.css
/* ... */
/* Overlay Backdrop */

.overlay-back {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: none;
    z-index: 100;
}

/* Dialog Window */

.dialog {
    position: fixed;
    top: 50%;
    left: 50%;
    right: 0;
    bottom: 0;
    z-index: 101;
    transform: translate(-50%, -50%);

    background-color: var(--dialog-background-color);
    color: var(--text-color);
    border: 1px solid black;
    width: 300px;
    max-height: 90vh;
    height: auto;
    margin: 0;
    padding: 0;

    display: flex;
    flex-direction: column;

    opacity: 1;

    transition:
        top 0.5s,
        opacity 0.5s;
}

@media (max-width: 320px) {
    .dialog {
        width: 250px;
    }
}

.dialog > div.dialog-content {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 100%;
    padding: 2rem 2rem 0;
    box-sizing: border-box;
    overflow-x: hidden;
    overflow-y: auto;
    flex: 1;
    min-height: 0;
}

.dialog > div.dialog-content > div.dialog-text {
    height: 100%;
    position: relative;
}

.dialog > div.dialog-content > div.dialog-text > ul > li {
    margin-bottom: 8px;
}

.dialog > div.dialog-content > div.dialog-text > ul > li:last-child {
    margin-bottom: 0;
}

.dialog > div.dialog-content > div.dialog-text > *:last-child {
    padding: 0 0 16px 0;
}

.dialog > div.dialog-content > span {
    margin: 8px 0;
}

.dialog > div.dialog-content > .next-wordle {
    margin: 8px 0;
}

.dialog button > span {
    margin-left: 8px;
}

.dialog button.close {
    position: absolute;
    top: 0;
    right: 0;
}

/* Specific Dialogs */

.dialog > .dialog-content > .how-to-play {
    height: 100%;
    position: relative;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content {
    padding: 0 0 8px 0;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content > h2 {
    text-transform: uppercase;
    margin: 12px 0;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content div.sample {
    display: flex;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content > div.meaning {
    margin: 12px 0;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content > div.meaning > div.sample {
    margin: 4px 0;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content > div.meaning > span.text {
    line-height: 1.25;
    font-size: 0.75em;
}

/* Notification */

.notification-area {
    position: fixed;
    top: 10%;
    left: 50%;
    z-index: 102;
    transform: translate(-50%, 0);

    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    width: 60%;
}

.notification-area > .notification {
    background-color: var(--notification-background-color);
    border: 1px solid var(--notification-background-color);
    border-radius: 0.25rem;
    margin: 0.2rem;

    /* Need to inherit z-index from parent, otherwise they won't appear on top of dialogs in iOS Safari */
    z-index: inherit;

    text-align: center;

    opacity: 1;
    transition: opacity 0.25s;
}

.notification-area > .notification > .notification-content {
    padding: 1rem 1.5rem;
    font-weight: bold;
    color: var(--notification-text-color);
}

/* Landscape Overlay */

#landscape-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--background-color);
    text-align: center;
    font-size: 24px;
    color: var(--text-color);
    z-index: 9999;
}

#landscape-overlay > .overlay-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

#landscape-overlay > .overlay-content > img {
    height: 100px;
}

/* Text Content */

a {
    color: var(--text-color);
}

/* Boxes */

.box {
    padding: 1em;
    margin: 0.1em;
    border: 1px solid black;
    line-height: 1.9em;
    text-align: center;
    position: relative;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    max-height: 2.75em;
    aspect-ratio: 1/1;
    width: 100%;
    max-width: 2.75em;
}

.box .box-letter {
    display: block;
    position: absolute;
    line-height: normal;
    font-size: 2rem;
    font-weight: bold;
    font-family: sans-serif;
    text-transform: uppercase;
    color: var(--letter-text-color);
}

/* Keyboard */

.keyboard {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 100%;
}

.keyboard > .keyboard-row {
    display: flex;
    justify-content: center;
    width: 100%;
}

.keyboard > .keyboard-row > .keyboard-item {
    position: relative;
    padding: 1em 0.5em;
    margin: 0.1em;
    border: 1px solid rgba(0, 0, 0, 0);
    border-radius: 0.25em;
    width: 5%;
    height: 1em;
    line-height: 1em;
    color: var(--letter-text-color);
    text-align: center;
}

.keyboard > .keyboard-row > .keyboard-item.big {
    width: 10%;
}

@media (max-width: 600px) {
    .keyboard > .keyboard-row > .keyboard-item {
        width: 0.4em;
    }

    .keyboard > .keyboard-row > .keyboard-item.big {
        width: 2.1em;
    }
}

@media (max-width: 320px) {
    .keyboard > .keyboard-row > .keyboard-item {
        width: 0.2em;
        height: 0.5em;
        line-height: 0.5em;
    }

    .keyboard > .keyboard-row > .keyboard-item.big {
        width: 1.6em;
    }
}

.keyboard > .keyboard-row > .keyboard-item > div {
    position: absolute;
    left: 0;
    width: 100%;
    height: 100%;
    display: inline-block;
    vertical-align: middle;
    font-size: 0.75em;
    font-weight: bold;
    font-family: sans-serif;
    pointer-events: none;
}

.keyboard > .keyboard-row > .keyboard-item.big > div {
    font-size: 0.65em;
}

/* Colours */

.standard {
    background-color: var(--standard-color);
}

.box {
    background-color: var(--standard-block-color);
    border: 1px solid var(--box-border-color);
}
/* ... */

